cynic-codegen/tests/snapshots/use_schema__schema_file_2.snap
---
source: cynic-codegen/tests/use-schema.rs
assertion_line: 25
expression: "format_code(format!(\"{}\", tokens))"

---
impl ::cynic::schema::QueryRoot for QueryRoot {}
impl ::cynic::schema::MutationRoot for MutationRoot {}
impl ::cynic::schema::SuscriptionRoot for SubscriptionRoot {}
pub struct Book;
pub mod book_fields {
    pub struct Id;
    impl ::cynic::schema::Field for Id {
        type SchemaType = super::String;
        fn name() -> &'static str {
            "id"
        }
    }
    impl ::cynic::schema::HasField<Id, super::String> for super::Book {}
    pub struct Name;
    impl ::cynic::schema::Field for Name {
        type SchemaType = super::String;
        fn name() -> &'static str {
            "name"
        }
    }
    impl ::cynic::schema::HasField<Name, super::String> for super::Book {}
    pub struct Author;
    impl ::cynic::schema::Field for Author {
        type SchemaType = super::String;
        fn name() -> &'static str {
            "author"
        }
    }
    impl ::cynic::schema::HasField<Author, super::String> for super::Book {}
}
pub struct BookChanged;
pub mod book_changed_fields {
    pub struct MutationType;
    impl ::cynic::schema::Field for MutationType {
        type SchemaType = super::MutationType;
        fn name() -> &'static str {
            "mutationType"
        }
    }
    impl ::cynic::schema::HasField<MutationType, super::MutationType> for super::BookChanged {}
    pub struct Id;
    impl ::cynic::schema::Field for Id {
        type SchemaType = super::Id;
        fn name() -> &'static str {
            "id"
        }
    }
    impl ::cynic::schema::HasField<Id, super::Id> for super::BookChanged {}
    pub struct Book;
    impl ::cynic::schema::Field for Book {
        type SchemaType = Option<super::Book>;
        fn name() -> &'static str {
            "book"
        }
    }
    impl ::cynic::schema::HasField<Book, Option<super::Book>> for super::BookChanged {}
}
pub struct MutationRoot;
pub mod mutation_root_fields {
    pub struct CreateBook;
    impl ::cynic::schema::Field for CreateBook {
        type SchemaType = super::Id;
        fn name() -> &'static str {
            "createBook"
        }
    }
    impl ::cynic::schema::HasField<CreateBook, super::Id> for super::MutationRoot {}
    pub mod create_book_arguments {
        pub struct Name;
        impl ::cynic::schema::HasArgument<Name> for super::CreateBook {
            type ArgumentSchemaType = super::super::String;
            type ArgumentKind = ::cynic::schema::ScalarArgument;
            fn name() -> &'static str {
                "name"
            }
        }
        pub struct Author;
        impl ::cynic::schema::HasArgument<Author> for super::CreateBook {
            type ArgumentSchemaType = super::super::String;
            type ArgumentKind = ::cynic::schema::ScalarArgument;
            fn name() -> &'static str {
                "author"
            }
        }
    }
    pub struct DeleteBook;
    impl ::cynic::schema::Field for DeleteBook {
        type SchemaType = super::Boolean;
        fn name() -> &'static str {
            "deleteBook"
        }
    }
    impl ::cynic::schema::HasField<DeleteBook, super::Boolean> for super::MutationRoot {}
    pub mod delete_book_arguments {
        pub struct Id;
        impl ::cynic::schema::HasArgument<Id> for super::DeleteBook {
            type ArgumentSchemaType = super::super::Id;
            type ArgumentKind = ::cynic::schema::ScalarArgument;
            fn name() -> &'static str {
                "id"
            }
        }
    }
}
pub struct MutationType {}
pub struct QueryRoot;
pub mod query_root_fields {
    pub struct Books;
    impl ::cynic::schema::Field for Books {
        type SchemaType = Vec<super::Book>;
        fn name() -> &'static str {
            "books"
        }
    }
    impl ::cynic::schema::HasField<Books, Vec<super::Book>> for super::QueryRoot {}
}
pub struct SubscriptionRoot;
pub mod subscription_root_fields {
    pub struct Interval;
    impl ::cynic::schema::Field for Interval {
        type SchemaType = super::Int;
        fn name() -> &'static str {
            "interval"
        }
    }
    impl ::cynic::schema::HasField<Interval, super::Int> for super::SubscriptionRoot {}
    pub mod interval_arguments {
        pub struct N;
        impl ::cynic::schema::HasArgument<N> for super::Interval {
            type ArgumentSchemaType = super::super::Int;
            type ArgumentKind = ::cynic::schema::ScalarArgument;
            fn name() -> &'static str {
                "n"
            }
        }
    }
    pub struct Books;
    impl ::cynic::schema::Field for Books {
        type SchemaType = super::BookChanged;
        fn name() -> &'static str {
            "books"
        }
    }
    impl ::cynic::schema::HasField<Books, super::BookChanged> for super::SubscriptionRoot {}
    pub mod books_arguments {
        pub struct MutationType;
        impl ::cynic::schema::HasArgument<MutationType> for super::Books {
            type ArgumentSchemaType = Option<super::super::MutationType>;
            type ArgumentKind = ::cynic::schema::EnumArgument;
            fn name() -> &'static str {
                "mutationType"
            }
        }
    }
}
impl ::cynic::schema::NamedType for Book {
    fn name() -> &'static str {
        "Book"
    }
}
impl ::cynic::schema::NamedType for BookChanged {
    fn name() -> &'static str {
        "BookChanged"
    }
}
impl ::cynic::schema::NamedType for MutationRoot {
    fn name() -> &'static str {
        "MutationRoot"
    }
}
impl ::cynic::schema::NamedType for QueryRoot {
    fn name() -> &'static str {
        "QueryRoot"
    }
}
impl ::cynic::schema::NamedType for SubscriptionRoot {
    fn name() -> &'static str {
        "SubscriptionRoot"
    }
}
pub type Boolean = bool;
pub type String = std::string::String;
pub type Float = f64;
pub type Int = i32;
pub type Id = cynic::Id;

